// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer golden fixtures > birthday-party.json at 80 cols 1`] = `
"Kids Birthday Party
Planning a kids birthday party with a team of helpers. People resource allocation ensures we never exceed 4 helpers simultaneously.

                   10:00   10:30    11:00   11:30   12:00    12:30   13:00   13:3013:40
─ Food ────────────────────────────────────────────────────────────────────────
Bake cake          ░░░░░░░░░░░░░░░░░│       │       │        │       │       │  
Ice cake           │       │        ░░░░░   │       │        │       │       │  
Serve cake         │       │        │       │       │        │      ████     │  
─ Venue ───────────────────────────────────────────────────────────────────────
Buy supplies       █████████████████│       │       │        │       │       │  
Decorate venue     │       │        ████████████    │        │       │       │  
Blow up balloons   │       │        │       │      ░░░░░░░░  │       │       │  
Clean up           │       │        │       │       │        │       │  ████████
─ Activities ──────────────────────────────────────────────────────────────────
Welcome guests     │       │        │       │   ███ │        │       │       │  
Party games        │       │        │       │      █████████████████ │       │  
Set up games       │       │        │       │       │      ░░░░░░    │       │  

--- Warnings ---
  - Step 'Blow up balloons' was delayed beyond its available slack due to resource conflict with 'Helpers'
  - Step 'Set up games' was delayed beyond its available slack due to resource conflict with 'Helpers'"
`;

exports[`renderer golden fixtures > london-sightseeing.json at 80 cols 1`] = `
"London Weekend Sightseeing
A two-day London itinerary covering major landmarks and cultural highlights. Dinner steps use ALAP timing to push them as late in the day as possible.

                        09:0010:0011:0012:0013:0014:0015:0016:0017:0018:0019:0020:0021:00
─ Day 1 ───────────────────────────────────────────────────────────────────────
Tower of London         █████████│    │    │   │    │    │   │    │    │   │    
Borough Market lunch    │    │   █████│    │   │    │    │   │    │    │   │    
Thames Southbank walk   │    │   │    ████ │   │    │    │   │    │    │   │    
Tate Modern             │    │   │    │   ███████   │    │   │    │    │   │    
Day 1 dinner            │    │   │    │    │   │ ████    │   │    │    │   │    
─ Day 2 ───────────────────────────────────────────────────────────────────────
British Museum          │    │   │    │    │   │    │████████████ │    │   │    
Covent Garden lunch     │    │   │    │    │   │    │    │   │   ███   │   │    
Westminster walk        │    │   │    │    │   │    │    │   │    │ █████  │    
London Eye              │    │   │    │    │   │    │    │   │    │    │ ██│    
Day 2 dinner            │    │   │    │    │   │    │    │   │    │    │   █████"
`;

exports[`renderer golden fixtures > roast-chicken.json at 80 cols 1`] = `
"Roast Chicken Dinner
A classic Sunday roast with oven-constrained cooking steps. The oven (capacity 1) forces chicken and potatoes to roast sequentially.

                   17:00          17:30           18:00          18:30          19:00
─ Mains ───────────────────────────────────────────────────────────────────────
Prep chicken       ████████       │               │              │              
Roast chicken      │       █████████████████████████████████████████████        
Make gravy         │              │               │              │      █████   
Plate up           │              │               │              │           ███
─ Sides ───────────────────────────────────────────────────────────────────────
Prep potatoes      ░░░░░░░░░░     │               │              │              
Steam vegetables   ░░░░░░░░       │               │              │              
Roast potatoes     │              │               │      ░░░░░░░░░░░░░░░░░░░░   
─ Setup ───────────────────────────────────────────────────────────────────────
Set table          ░░░░░          │               │              │              
Preheat Oven       │    ░░░       │               │              │              "
`;

exports[`renderer golden fixtures > roast-chicken.json at 120 cols 1`] = `
"Roast Chicken Dinner
A classic Sunday roast with oven-constrained cooking steps. The oven (capacity 1) forces chicken and potatoes to roast sequentially.

                   17:00                    17:30                     18:00                    18:30                    19:00
─ Mains ───────────────────────────────────────────────────────────────────────────────────────────────────────────────
Prep chicken       █████████████            │                         │                        │                        
Roast chicken      │            ███████████████████████████████████████████████████████████████████████████             
Make gravy         │                        │                         │                        │           █████████    
Plate up           │                        │                         │                        │                    ████
─ Sides ───────────────────────────────────────────────────────────────────────────────────────────────────────────────
Prep potatoes      ░░░░░░░░░░░░░░░░░        │                         │                        │                        
Steam vegetables   ░░░░░░░░░░░░░            │                         │                        │                        
Roast potatoes     │                        │                         │           ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░    
─ Setup ───────────────────────────────────────────────────────────────────────────────────────────────────────────────
Set table          ░░░░░░░░                 │                         │                        │                        
Preheat Oven       │       ░░░░░            │                         │                        │                        "
`;

exports[`renderer golden fixtures > roast-chicken.json with quiet: false 1`] = `
"Roast Chicken Dinner
A classic Sunday roast with oven-constrained cooking steps. The oven (capacity 1) forces chicken and potatoes to roast sequentially.

                   17:00          17:30           18:00          18:30          19:00
─ Mains ───────────────────────────────────────────────────────────────────────
Prep chicken       ████████       │               │              │              
Roast chicken      │       █████████████████████████████████████████████        
Make gravy         │              │               │              │      █████   
Plate up           │              │               │              │           ███
─ Sides ───────────────────────────────────────────────────────────────────────
Prep potatoes      ░░░░░░░░░░     │               │              │              
Steam vegetables   ░░░░░░░░       │               │              │              
Roast potatoes     │              │               │      ░░░░░░░░░░░░░░░░░░░░   
─ Setup ───────────────────────────────────────────────────────────────────────
Set table          ░░░░░          │               │              │              
Preheat Oven       │    ░░░       │               │              │              

--- Summary ---
Total time: 2h
Steps: 9
Critical path: 2h (4 steps)
Resources used: Oven

--- Critical Path ---
Prep chicken -> Roast chicken -> Make gravy -> Plate up

Float per step:
  Prep chicken: 17:00 -> 17:15  [0m (critical)]
  Prep potatoes: 17:00 -> 17:20  [55m slack]
  Steam vegetables: 17:00 -> 17:15  [100m slack]
  Set table: 17:00 -> 17:10  [105m slack]
  Preheat Oven: 17:10 -> 17:15  [10m slack]
  Roast chicken: 17:15 -> 18:45  [0m (critical)]
  Roast potatoes: 18:15 -> 18:55  [55m slack]
  Make gravy: 18:45 -> 18:55  [0m (critical)]
  Plate up: 18:55 -> 19:00  [0m (critical)]"
`;

exports[`renderer golden fixtures > simple.json at 80 cols 1`] = `
"Simple Test Schedule

         10:00                       10:30                        11:00         11:15
Step A   ████████████████████████████│                            │             
Step B   │                           ███████████████████████████████████████████
Step C   │                           ░░░░░░░░░░░░░░░░░░░          │             "
`;
